[package]
name = "zino-axum"
description = "Integrations with axum for zino."
version = "0.3.0"
rust-version = "1.80"
edition = "2021"
license = "MIT"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["http", "web", "framework"]
homepage = "https://github.com/zino-rs/zino"
repository = "https://github.com/zino-rs/zino"
documentation = "https://docs.rs/zino-axum"
readme = "README.md"

[features]
orm = ["zino-orm", "zino-orm/openapi"]

[dependencies]
async-trait = "0.1.83"
futures = "0.3.31"
http = "1.2.0"
tracing = "0.1.41"

[dependencies.axum]
version = "0.7.9"
default-features = false
features = [
    "http1",
    "matched-path",
    "original-uri",
    "tokio",
]

[dependencies.tokio]
version = "1.42.0"
features = [
    "macros",
    "parking_lot",
    "rt-multi-thread",
    "signal",
]

[dependencies.tower]
version = "0.5.2"
features = ["timeout"]

[dependencies.tower-http]
version = "0.6.2"
features = [
    "add-extension",
    "catch-panic",
    "compression-gzip",
    "cors",
    "decompression-gzip",
    "fs",
    "set-header",
    "trace",
]

[dependencies.utoipa-rapidoc]
version = "5.0.0"
features = ["axum"]

[dependencies.zino-core]
path = "../zino-core"
version = "0.30.0"
features = ["runtime-tokio"]

[dependencies.zino-http]
path = "../zino-http"
version = "0.2.0"

[dependencies.zino-orm]
path = "../zino-orm"
version = "0.1.0"
optional = true

[dependencies.zino-openapi]
path = "../zino-openapi"
version = "0.1.0"
