[package]
name = "zino-channel"
description = "Cloud events and subscriptions for zino."
version = "0.3.1"
rust-version = "1.80"
edition = "2021"
license = "MIT"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["http", "web", "framework"]
homepage = "https://github.com/zino-rs/zino"
repository = "https://github.com/zino-rs/zino"
documentation = "https://docs.rs/zino-channel"
readme = "README.md"

[package.metadata.docs.rs]
features = ["flume"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
flume = [
    "dep:ahash",
    "dep:flume",
    "dep:futures",
    "dep:parking_lot",
]

[dependencies]
serde_json = "1.0.137"

[dependencies.ahash]
version = "0.8.11"
optional = true

[dependencies.flume]
version = "0.11.1"
optional = true

[dependencies.futures]
version = "0.3.31"
optional = true

[dependencies.parking_lot]
version = "0.12.3"
optional = true

[dependencies.serde]
version = "1.0.217"
features = ["derive"]

[dependencies.zino-core]
path = "../zino-core"
version = "0.31.2"
