[package]
name = "zino-channel"
description = "Cloud events and subscriptions for zino."
version = "0.4.1"
rust-version = "1.80"
edition = "2021"
license = "MIT"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["http", "web", "framework"]
homepage = "https://github.com/zino-rs/zino"
repository = "https://github.com/zino-rs/zino"
documentation = "https://docs.rs/zino-channel"
readme = "README.md"

[package.metadata.docs.rs]
features = ["flume"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
flume = [
    "dep:ahash",
    "dep:flume",
    "dep:futures",
    "dep:parking_lot",
]

[dependencies]
ahash = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
zino-core = { workspace = true }

[dependencies.flume]
version = "0.11.1"
optional = true

[lints]
workspace = true
