[package]
name = "zino-channel"
description = "Cloud events and subscriptions for zino."
version = "0.6.0"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["http", "web", "framework"]
readme = "README.md"
documentation = "https://docs.rs/zino-channel"
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[package.metadata.docs.rs]
features = ["flume"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
flume = [
    "dep:ahash",
    "dep:flume",
    "dep:futures",
    "dep:parking_lot",
]

[dependencies]
ahash = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
zino-core = { workspace = true }

[dependencies.flume]
version = "0.11.1"
optional = true

[lints]
workspace = true
