[package]
name = "zino-chatbot"
description = "Unified access to chatbot services for zino."
version = "0.4.0"
rust-version = "1.80"
edition = "2021"
license = "MIT"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["http", "web", "framework"]
homepage = "https://github.com/zino-rs/zino"
repository = "https://github.com/zino-rs/zino"
documentation = "https://docs.rs/zino-chatbot"
readme = "README.md"

[dependencies]
async-openai = "0.27.2"
futures = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
zino-core = { workspace = true, features = ["http-client"] }

[lints]
workspace = true