[package]
name = "zino-chatbot"
description = "Unified access to chatbot services for zino."
version = "0.11.1"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["http", "web", "framework"]
readme = "README.md"
documentation = "https://docs.rs/zino-chatbot"
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
async-openai = "0.30.1"
futures = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
zino-core = { workspace = true, features = ["http-client"] }

[lints]
workspace = true