[package]
name = "zino-connector"
description = "Unified connector to data sources for zino."
version = "0.3.0"
rust-version = "1.80"
edition = "2021"
license = "MIT"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["http", "web", "framework"]
homepage = "https://github.com/zino-rs/zino"
repository = "https://github.com/zino-rs/zino"
documentation = "https://docs.rs/zino-connector"
readme = "README.md"

[package.metadata.docs.rs]
features = ["all-connectors"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
all-connectors = [
    "connector-arrow",
    "connector-http",
    "connector-mysql",
    "connector-postgres",
    "connector-sqlite",
]
connector-arrow = ["dep:datafusion", "zino-core/http-client"]
connector-http = [
    "dep:http",
    "dep:reqwest",
    "dep:percent-encoding",
    "dep:serde_json",
    "dep:serde_qs",
    "dep:url",
    "zino-core/http-client",
]
connector-mysql = ["dep:futures", "sqlx", "sqlx/mysql"]
connector-postgres = ["dep:futures", "sqlx", "sqlx/postgres"]
connector-sqlite = ["dep:futures", "sqlx", "sqlx/sqlite"]
default = ["connector-http"]

[dependencies]
apache-avro = "0.17.0"
regex = "1.11.1"
tracing = "0.1.41"

[dependencies.datafusion]
version = "45.0.0"
optional = true

[dependencies.futures]
version = "0.3.31"
optional = true

[dependencies.http]
version = "1.2.0"
optional = true

[dependencies.percent-encoding]
version = "2.3.1"
optional = true

[dependencies.reqwest]
version = "0.12.12"
optional = true
default-features = false
features = [
    "blocking",
    "gzip",
    "json",
    "multipart",
]

[dependencies.serde]
version = "1.0.217"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.138"
optional = true
features = ["raw_value"]

[dependencies.serde_qs]
version = "0.13.0"
optional = true

[dependencies.sqlx]
version = "0.8.3"
optional = true
default-features = false
features = [
    "chrono",
    "json",
    "rust_decimal",
    "uuid",
]

[dependencies.toml]
version = "0.8.20"
default-features = false

[dependencies.url]
version = "2.5.4"
optional = true

[dependencies.zino-core]
path = "../zino-core"
version = "0.32.0"
