[package]
name = "zino-connector"
description = "Unified connector to data sources for zino."
version = "0.5.0"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["http", "web", "framework"]
readme = "README.md"
documentation = "https://docs.rs/zino-connector"
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[package.metadata.docs.rs]
features = ["all-connectors"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
all-connectors = [
    "connector-arrow",
    "connector-http",
    "connector-mysql",
    "connector-postgres",
    "connector-sqlite",
]
connector-arrow = ["dep:datafusion", "zino-core/http-client"]
connector-http = [
    "dep:http",
    "dep:reqwest",
    "dep:percent-encoding",
    "dep:serde_json",
    "dep:serde_qs",
    "dep:url",
    "zino-core/http-client",
]
connector-mysql = ["dep:futures", "sqlx", "sqlx/mysql"]
connector-postgres = ["dep:futures", "sqlx", "sqlx/postgres"]
connector-sqlite = ["dep:futures", "sqlx", "sqlx/sqlite"]
default = ["connector-http"]

[dependencies]
apache-avro = { workspace = true }
futures = { workspace = true, optional = true }
http = { workspace = true, optional = true }
percent-encoding = { workspace = true, optional = true }
regex = { workspace = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
serde_qs = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, optional = true }
zino-core = { workspace = true }

[dependencies.datafusion]
version = "46.0.1"
optional = true

[lints]
workspace = true
