[package]
name = "zino-core"
description = "Core types and traits for zino."
version = "0.29.3"
rust-version = "1.80"
edition = "2021"
license = "MIT"
categories = ["asynchronous", "network-programming", "web-programming::http-server"]
keywords = ["http", "web", "framework"]
homepage = "https://github.com/zino-rs/zino"
repository = "https://github.com/zino-rs/zino"
documentation = "https://docs.rs/zino-core"
readme = "README.md"

[package.metadata.docs.rs]
features = ["full", "runtime-tokio"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
all-locales = [
    "locale",
    "locale-de",
    "locale-en",
    "locale-es",
    "locale-fr",
    "locale-zh",
]
all-validators = [
    "validator-credit-card",
    "validator-email",
    "validator-phone-number",
    "validator-regex",
]
cookie = ["dep:cookie", "reqwest?/cookies"]
crypto-sm = ["dep:ctr", "dep:sm3", "dep:sm4"]
debug = [
    "serde_json/preserve_order",
    "toml/preserve_order",
    "utoipa?/preserve_order",
    "utoipa?/preserve_path_order",
]
default = []
dotenv = ["dep:dotenvy"]
env-filter = ["tracing-subscriber/env-filter", "tracing-subscriber/smallvec"]
full = [
    "all-locales",
    "all-validators",
    "cookie",
    "dotenv",
    "env-filter",
    "http-client",
    "metrics",
    "oidc",
    "openapi",
    "orm",
    "tracing-log",
]
http-client = ["dep:reqwest-middleware", "dep:reqwest-tracing", "reqwest"]
locale = ["random_word"]
locale-en = ["locale", "random_word/en"]
locale-es = ["locale", "random_word/es"]
locale-de = ["locale", "random_word/de"]
locale-fr = ["locale", "random_word/fr"]
locale-zh = ["locale", "random_word/zh"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]
oidc = ["dep:rauthy-client"]
openapi = ["dep:utoipa"]
orm = ["orm-sqlx"]
orm-mariadb = ["orm-sqlx", "sqlx/mysql"]
orm-mysql = ["orm-sqlx", "sqlx/mysql"]
orm-postgres = ["orm-sqlx", "sqlx/postgres"]
orm-sqlite = ["orm-sqlx", "sqlx/sqlite"]
orm-sqlx = ["orm", "sqlx", "sqlx/sqlite"]
orm-tidb = ["orm-sqlx", "sqlx/mysql"]
runtime-async-std = ["sqlx?/runtime-async-std"]
runtime-tokio = ["sqlx?/runtime-tokio"]
sentry = ["dep:sentry", "dep:sentry-tracing", "tracing-subscriber"]
tls-native = [
    "reqwest?/native-tls",
    "sentry?/native-tls",
    "sqlx?/tls-native-tls",
]
tls-rustls = [
    "reqwest?/rustls-tls-native-roots",
    "sentry?/rustls",
    "sqlx?/tls-rustls",
]
tracing-log = ["dep:tracing-log", "tracing-subscriber/tracing-log"]
tracing-subscriber = ["dep:tracing-appender", "dep:tracing-subscriber"]
validator = []
validator-credit-card = ["validator", "dep:card-validate"]
validator-email = ["validator"]
validator-phone-number = ["validator", "dep:phonenumber"]
validator-regex = ["validator"]

[dependencies]
aes-gcm-siv = "0.11.1"
ahash = "0.8.11"
apache-avro = "0.17.0"
base64 = "0.22.1"
cfg-if = "1.0"
convert_case = "0.6.0"
cron = "0.13.0"
csv = "1.3.1"
dirs = "5.0.1"
faster-hex = "0.10.0"
futures = "0.3.31"
hkdf = "0.12.4"
hmac = "0.12.1"
http = "1.2.0"
parking_lot = "0.12.3"
rand = "0.8.5"
regex = "1.11.1"
rust_decimal = "1.36.0"
serde_qs = "0.13.0"
sha1 = "0.10.6"
sha2 = "0.10.8"
smallvec = "1.13.2"
tracing = "0.1.41"
url = "2.5.4"

[dependencies.argon2]
version = "0.5.3"
features = ["std"]

[dependencies.card-validate]
version = "2.4.0"
optional = true

[dependencies.cookie]
version = "0.18.1"
optional = true

[dependencies.chrono]
version = "0.4.39"
features = ["serde"]

[dependencies.ctr]
version = "0.9.2"
optional = true

[dependencies.dotenvy]
version = "0.15.7"
optional = true

[dependencies.metrics]
version = "0.24.1"
optional = true

[dependencies.metrics-exporter-prometheus]
version = "0.16.0"
optional = true
default-features = false
features = ["http-listener"]

[dependencies.phonenumber]
version = "0.3.6"
optional = true

[dependencies.random_word]
version = "0.4.3"
optional = true

[dependencies.rauthy-client]
version = "0.5.0"
optional = true

[dependencies.reqwest]
version = "0.12.9"
optional = true
default-features = false
features = [
    "blocking",
    "gzip",
    "json",
    "multipart",
]

[dependencies.reqwest-middleware]
version = "0.4.0"
optional = true
features = ["json", "multipart"]

[dependencies.reqwest-tracing]
version = "0.5.5"
optional = true

[dependencies.sentry]
version = "0.35.0"
optional = true

[dependencies.sentry-tracing]
version = "0.35.0"
optional = true

[dependencies.serde]
version = "1.0.216"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.133"
features = ["raw_value"]

[dependencies.sm3]
version = "0.4.2"
optional = true

[dependencies.sm4]
version = "0.5.1"
optional = true

[dependencies.sqids]
version = "0.4.1"
optional = true

[dependencies.sqlx]
version = "0.8.2"
optional = true
default-features = false
features = [
    "chrono",
    "json",
    "rust_decimal",
    "uuid",
]

[dependencies.toml]
version = "0.8.19"
default-features = false
features = ["parse"]

[dependencies.tracing-appender]
version = "0.2.3"
optional = true
features = ["parking_lot"]

[dependencies.tracing-log]
version = "0.2.0"
optional = true

[dependencies.tracing-subscriber]
version = "0.3.19"
optional = true
default-features = false
features = [
    "ansi",
    "json",
    "local-time",
    "parking_lot",
]

[dependencies.unic-langid]
version = "0.9.5"
optional = true

[dependencies.utoipa]
version = "5.2.0"
optional = true
features = [
    "non_strict_integers",
    "url",
    "ulid",
    "uuid",
]

[dependencies.uuid]
version = "1.11.0"
features = [
    "fast-rng",
    "serde",
    "v4",
    "v7",
]

[dev-dependencies]
anyhow = "1.0.94"
arrayvec = "0.7.6"
base64-simd = "0.8.0"
criterion = "0.5.1"
data-encoding = "2.6.0"
indexmap = "2.7.0"
libsm = "0.6.0"
ryu = "1.0.18"
sm3 = "0.4.2"
sonic-rs = "0.3.16"
tinyvec = { version = "1.8.0", features = ["alloc"] }
uuid-simd = "0.8.0"

[[bench]]
name = "criterion_main"
harness = false
