[package]
name = "zino-core"
description = "Core types and traits for zino."
version = "0.34.0"
categories = ["asynchronous", "network-programming", "web-programming::http-server"]
keywords = ["http", "web", "framework"]
readme = "README.md"
documentation = "https://docs.rs/zino-core"
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[package.metadata.docs.rs]
features = ["full", "runtime-tokio"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
all-locales = [
    "locale",
    "locale-de",
    "locale-en",
    "locale-es",
    "locale-fr",
    "locale-ru",
    "locale-zh",
]
all-validators = [
    "validator-credit-card",
    "validator-email",
    "validator-phone-number",
    "validator-regex",
]
apalis = ["dep:apalis"]
cookie = ["reqwest?/cookies"]
crypto-sm = ["dep:ctr", "dep:sm3", "dep:sm4"]
debug = ["serde_json/preserve_order", "toml/preserve_order"]
default = []
dotenv = ["dep:dotenvy"]
env-filter = ["tracing-subscriber/env-filter", "tracing-subscriber/smallvec"]
full = [
    "all-locales",
    "all-validators",
    "apalis",
    "cookie",
    "dotenv",
    "env-filter",
    "http-client",
    "preferences",
    "metrics",
    "sqlx",
    "tracing-log",
]
http-client = ["dep:reqwest-middleware", "dep:reqwest-tracing", "reqwest"]
locale = ["random_word"]
locale-en = ["locale", "random_word/en"]
locale-es = ["locale", "random_word/es"]
locale-de = ["locale", "random_word/de"]
locale-fr = ["locale", "random_word/fr"]
locale-ru = ["locale", "random_word/ru"]
locale-zh = ["locale", "random_word/zh"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus", "apalis?/prometheus"]
preferences = ["dep:rust-ini"]
runtime-async-std = ["sqlx?/runtime-async-std"]
runtime-tokio = ["sqlx?/runtime-tokio"]
sentry = [
    "dep:sentry",
    "dep:sentry-tracing",
    "apalis?/sentry",
    "tracing-subscriber",
]
sqlx = ["dep:sqlx"]
tls-native = [
    "reqwest?/native-tls",
    "sentry?/native-tls",
    "sqlx?/tls-native-tls",
]
tls-rustls = [
    "reqwest?/rustls-tls-native-roots",
    "sentry?/rustls",
    "sqlx?/tls-rustls",
]
tracing-log = ["dep:tracing-log", "tracing-subscriber/tracing-log"]
tracing-subscriber = ["dep:tracing-appender", "dep:tracing-subscriber"]
validator = []
validator-credit-card = ["validator", "dep:card-validate"]
validator-email = ["validator"]
validator-phone-number = ["validator", "dep:phonenumber"]
validator-regex = ["validator"]

[dependencies]
aes-gcm-siv = "0.11.1"
base64 = "0.22.1"
cron = "0.15.0"
csv = "1.3.1"
dirs = "6.0.0"
faster-hex = "0.10.0"
hkdf = "0.12.4"
sha1 = "0.10.6"
sha2 = "0.10.8"
ahash = { workspace = true }
apache-avro = { workspace = true }
cfg-if = { workspace = true }
chrono = { workspace = true }
convert_case = { workspace = true }
hmac = { workspace = true }
http = { workspace = true }
metrics = { workspace = true, optional = true }
parking_lot = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, optional = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
sm3 = { workspace = true, optional = true }
smallvec = { workspace = true }
sqlx = { workspace = true, optional = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dependencies.apalis]
version = "0.7.0"
optional = true

[dependencies.argon2]
version = "0.5.3"
features = ["std"]

[dependencies.card-validate]
version = "2.4.0"
optional = true

[dependencies.ctr]
version = "0.9.2"
optional = true

[dependencies.dotenvy]
version = "0.15.7"
optional = true

[dependencies.metrics-exporter-prometheus]
version = "0.16.2"
optional = true
default-features = false
features = ["http-listener"]

[dependencies.phonenumber]
version = "0.3.7"
optional = true

[dependencies.random_word]
version = "0.5.0"
optional = true

[dependencies.reqwest-middleware]
version = "0.4.2"
optional = true
features = ["json", "multipart"]

[dependencies.reqwest-tracing]
version = "0.5.7"
optional = true

[dependencies.rust-ini]
version = "0.21.1"
optional = true

[dependencies.sentry]
version = "0.37.0"
optional = true

[dependencies.sentry-tracing]
version = "0.37.0"
optional = true

[dependencies.sm4]
version = "0.5.1"
optional = true

[dependencies.tracing-appender]
version = "0.2.3"
optional = true
features = ["parking_lot"]

[dependencies.tracing-log]
version = "0.2.0"
optional = true

[dependencies.tracing-subscriber]
version = "0.3.19"
optional = true
default-features = false
features = [
    "ansi",
    "json",
    "local-time",
    "parking_lot",
]

[lints]
workspace = true
